argocd/overlays/civo-demo/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/part-of: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.parca.dev
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.parca.dev
    secretName: argocd.parca.dev
